# coruja-old

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  coruja.code-workspace  dev-requirements.txt
coruja/: CMakeLists.txt
coruja-cli/: CMakeLists.txt
coruja-cli/src/: command.h  globals.h  main.c
coruja-frontend/: .eslintcache  package-lock.json  package.json
coruja-frontend/src/: App.tsx
coruja/include/coruja/: ansi.h  coruja.h  log.h
coruja/src/coruja/: address.c  address.h  coruja.c  coruja.test.c  log.c
docs/: coruja.drawio.xml
